Goals for 0.51 release:

   * fill-out object/coord set specific settings

   * clean-up return conventions in cmd.py

   * Edit Menu in Tk

   * complete first-round test-cases
   
   * finish retrofit of the parser

   * feedback conditionals placed around all error output

   * provide accurate documentation

Changes up to 0.51

   * depth_cue toggle setting (important for low-end PC hardware)

Changes up to 0.50

   * can now "pick" C-alphas in the ribbon

   * can now "pick" atoms and bonds in the stick representation 

   * improved clipping plane control command "clip"

   * pym file extension support, for PyMOL-specific .py files

   * better windows NT compatibility

   * settings browser

   * view, view_get, view_set commands

   * Parser now contains a general shortcut handling module to
     further help in reducing typing

   * Slight tweak of the virtual trackball

   * Saving and restoring matrix, center, origin, zoom, clip

   * Internal program output no longer includes python's stderr
   
   * New thread management solution -- simple and stable -- plus 
     it even works (I've even got test cases to prove it)!

   * Fixed memory-trashing bug in the selector

   * Found a workaround for KDE/Gnome/Tkinter/Tcl/Tk problems under linux

   * Created Save option on the Tkinter menu, and added additional file types.

   * TAB-activated filename and command completion (CTRL-D too)

   * Former TAB functionality moved to ESC (text/graphics toggle)

   * Auto-detection of stereo capability

   * Created a robust Feedback control mechanism

   * Eliminated hangs and crashes upon program termination with Win2k/NT.
   
   * "Distances" wizard (internal gui;replace with external version later)

   * "Pair Fit" wizard (internal gui; replace with external version later)

   * Mesh objects now have states, and new meshes are appended.

   * Modified raytrace antialiasing transfer function to improve sharpness.
